2008-09-04  Raja R Harinath  <harinath@hurrynot.org>

	* DataRow.cs (CheckChildRows) <1-arg variant>: Remove excessive
	indentation.
	(CheckChildRows) <3-arg variant>: Likewise.  Move/split loop
	inside a switch.
	(EndEdit): Out-dent some code.
	(IsNullColumns): Simplify slightly.

	* DataRelationCollection.cs (CanRemove): Simplify slightly.

	* DataRelation.cs (CheckStateForProperty): Use the childColumn to
	get the child table.

	* DataColumn.cs (AllowDBNull.set): Rearrange code to be more readable.
	(AutoIncrement.set): Likewise.
	(Caption): Likewise.
	(SetDefaultValue): Likewise.

2008-08-28  Raja R Harinath  <harinath@hurrynot.org>

	* Constraint.cs (SetExtendedProperties): New internal method.
	Move here from ...
	(ExtendedProperties.set): ... here.  Kill a #ifdef.
	* DataTable.cs (DeserializeConstraints): Update to changes.

2008-08-27  Raja R Harinath  <harinath@hurrynot.org>

	* ConstraintCollection.cs (Item) <string variant>: Don't incur
	additional check for index that's returned by 'IndexOf'.
	(_createNewConstraintName): Improve readability of code.
	(_isDuplicateConstraintName): Perform cheaper test first.

	* ConstraintCollection.cs: Reduce some #ifdef by using partial
	classes.  Move 'sealed' and '[Serializable]' to appropriate
	partial class declarations.
	* DataRowCollection.cs: Likewise.

2008-08-13  Marek Habersack  <mhabersack@novell.com>

	* DataRow.cs: do not check whether a column is read-only when
	importing a record.

2008-08-08  Raja R Harinath  <harinath@hurrynot.org>

	* DataColumn.cs: Update to changes in DataCollection.

2008-07-29  Veerapuram Varadhan  <vvaradhan@novell.com>

	Fixes ##377146
	* XmlDataReader.cs (ReadElementElement): Handle custom reference types sanely.

2008-07-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* DataColumnCollection.cs (IndexOf): Include name of column - for which
	there are multiple matches in a different case - in the exception
	message.